@@ -1,4 +1,4 @@
-/*	$OpenBSD: scard.h,v 1.8 2002/03/21 16:54:53 markus Exp $	*/
+/*	$OpenBSD: scard.h,v 1.9 2002/03/21 21:54:34 rees Exp $	*/
 
 /*
  * Copyright (c) 2001 Markus Friedl.  All rights reserved.
@@ -35,7 +35,7 @@
 #define SCARD_ERROR_NOCARD	-2
 #define SCARD_ERROR_APPLET	-3
 
-Key	*sc_get_key(const char*);
+Key	*sc_get_key(const char*, const char*);
 ENGINE	*sc_get_engine(void);
 void	 sc_close(void);
 int	 sc_put_key(Key *, const char*);
