@@ -136,6 +136,9 @@
    - markus@cvs.openbsd.org 2002/03/21 21:23:34
      [sshd.c]
      add privsep_preauth() and remove 1 goto; ok provos@
+   - rees@cvs.openbsd.org 2002/03/21 21:54:34
+     [scard.c scard.h ssh-keygen.c]
+     Add PIN-protection for secret key.
 
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
@@ -7982,4 +7985,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1963 2002/03/22 03:43:46 mouring Exp $
+$Id: ChangeLog,v 1.1964 2002/03/22 03:47:38 mouring Exp $
